fix form alignments + make it pixel perfect

--- a/wp-content/themes/delivering-happiness/assets/css/pardot.css
+++ b/wp-content/themes/delivering-happiness/assets/css/pardot.css
@@ -1,8 +1,15 @@
+@font-face{font-family:"Museo Slab";src:url("../fonts/Museo_Slab_500.eot?") format("eot"),url("../fonts/Museo_Slab_500.ttf") format("woff"),url("../fonts/Museo_Slab_500.woff") format("woff"),url("../fonts/Museo_Slab_500.ttf") format("truetype")}
+
 body{
     padding: :0px;
     margin:0px;
+    font-family:"Museo Slab" , Arial;
+    -webkit-font-smoothing: antialiased;
 }
-@font-face{font-family:"Museo Slab";src:url("../fonts/Museo_Slab_500.eot?") format("eot"),url("../fonts/Museo_Slab_500.ttf") format("woff"),url("../fonts/Museo_Slab_500.woff") format("woff"),url("../fonts/Museo_Slab_500.ttf") format("truetype")}
+*{
+	-webkit-font-smoothing: antialiased;	
+}
+
 .form-wrapper{
     font-family:"Museo Slab" , Arial;
     background:#fff;
@@ -63,6 +70,10 @@ body{
     width:450px;
     font-size:13px;
 }
+.form-content input.text:focus , .form-content textarea:focus, .form-content select:focus{
+	outline: none;
+	box-shadow: none;
+}
 form.form input.date {
     background: url("http://go.deliveringhappiness.com/images/calendar.png") no-repeat scroll 4px center rgba(0, 0, 0, 0);
     border: 2px solid #cbcbcb;
@@ -109,96 +120,152 @@ form.form input.date {
     font-family:"Museo Slab" , Arial;
 }
 
-.service-request-page-form *{
+.service-request-form *{
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	-webkit-font-smoothing: antialiased;
 }
-.service-request-page-form .form p label.field-label{
-	color: #fff;
+.service-request-form{
+	width: 421px;
+	overflow: hidden;
+	background-color: #0098cf;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+.service-request-form label{
+	color: #ffffff;
 	font-size: 11px;
-	display: table-cell;
-	width: 1%;
-	white-space: nowrap;
-	vertical-align: middle;
-	min-width: 68px;
-	padding: 5px 2px 0 0 !important;
+	font-weight: normal;
+	display: inline-block;
 }
-.service-request-page-form p.errors{
-	margin-top: 0;
+.service-request-form .field-label{
+	line-height: 25px;
+	letter-spacing: -0.02em;
+	padding-right: 3px;
+	min-width: 58px;
 }
-.service-request-page-form .form p span.error.no-label{
-	position: absolute;
-	right: 0;
-	font-size: 11px;
-	color: red;
-	bottom: 0;
-	width: 100%;
-	text-align: right;
+.service-request-form span.value{
+	display: block;
+	clear: both;
+	margin: 0 -2px;
 }
-.service-request-page-form input.text, .service-request-page-form textarea, .service-request-page-form select{
+.service-request-form span.value span{
+	display: inline-block;
+	text-align: center;
+	padding: 0 2px;
+}
+.service-request-form span.value label{
+	display: block;
+}
+.service-request-form .text, .service-request-form .select, .service-request-form .standard{
+	height: 25px;
 	border: 0;
-	height: 24px;
-	position: relative;
-	z-index: 2;
-	float: left;
-	width: 100%;
-	margin-bottom: 0;
-	display: table-cell;
+	background-color: #fff;
 }
-.service-request-page-form .first_name, .service-request-page-form .last_name{
+.service-request-form .form-field{
+	margin-bottom: 11px;
+	clear: both;
+}
+.service-request-form .form-field.first_name, .service-request-form .form-field.last_name, .service-request-form .form-field.email, .service-request-form .form-field.phone{
 	float: left;
 	width: 50%;
+	clear: none;
 }
-.service-request-page-form .email{
-	clear: both;
+.service-request-form .form-field.last_name{
+	text-align: right;
 }
-.service-request-page-form .city, .service-request-page-form .state, .service-request-page-form .country{
+.service-request-form .form-field.phone{
+	text-align: right;
+}
+.service-request-form .form-field.first_name .text, .service-request-form .form-field.last_name .text, .service-request-form .form-field.email .text, .service-request-form .form-field.phone .text{
+	width: 142px;
+}
+.service-request-form .form-field.city, .service-request-form .form-field.state, .service-request-form .form-field.country{
 	float: left;
-	width: 33.33%;
+	clear: none;
+}
+.service-request-form .form-field.job_title .text{
+	width: 357px;
+	float: right;
+}
+.service-request-form .form-field.company{
+	text-align: right;
+}
+.service-request-form .form-field.company .field-label{
+	letter-spacing: -0.05em;
+	float: left;
+}
+.service-request-form .form-field.company .text{
+	width: 286px;
+}
+.service-request-form .form-field.city{
+	width: 156px;
+}
+.service-request-form .form-field.country{
+	padding-left: 8px;
+	float: right;
+}
+.service-request-form .form-field.city .text{
+	width: 79px;
+}
+.service-request-form .form-field.state .text{
+	width: 74px;
+}
+.service-request-form .form-field.country .text{
+	width: 95px;
+}
+.service-request-form .form-field.state, .service-request-form .form-field.country{
+	text-align: right;
 }
 
-.service-request-page-form p.form-field.employees{
-	clear: both;
-	padding-top: 18px;
-	padding-bottom: 25px;
+.service-request-form .form-field.state .field-label, .service-request-form .form-field.country .field-label{
+	min-width: inherit;
 }
-.service-request-page-form .employees select{
-	width: 118px;
-	margin-left: 10px;
+.service-request-form .form-field.employees{
+	padding-top: 17px;
 }
-.service-request-page-form p.form-field{
-	position: relative;
-	display: table;
-	border-collapse: separate;
-	padding-bottom: 13px;
-	padding-left: 6px;
+.service-request-form .form-field.employees .field-label{
+	letter-spacing: 0;
 }
-
-.service-request-page-form .form .Importance_of_Employee_Happiness label.field-label{
-	display: block;
+.service-request-form .form-field.employees .select{
+	width: 117px;
+}
+.service-request-form .form-field.Importance_of_Employee_Happiness{
+	padding-top: 7px;
+	margin-bottom: 14px;
+}
+.service-request-form .form-field.Importance_of_Employee_Happiness .field-label, .service-request-form .form-field.Company_Culture_Pain_Point .field-label{
+	letter-spacing: -0.01em;
+}
+.service-request-form .form-field.Company_Culture_Pain_Point .standard, .service-request-form .form-field.Company_Culture_Pain_Point .text, .service-request-form .form-field.Company_Culture_Pain_Point .select{
+	width: 143px;
+}
+.service-request-form .form-field.Newsletter_Opt_in{
 	padding-top: 10px;
-	width: 100%;
-	white-space: inherit;
+	text-align: center;
+	margin-bottom: 8px;
 }
-.service-request-page-form form.form span.value span{
+.service-request-form .form-field.Newsletter_Opt_in span.value label{
+	display: inline-block;
+}
+.service-request-form .submit{
+	margin: 0;
+	padding: 0;
 	text-align: center;
 }
-.service-request-page-form form.form span.value input{
-	display: block;
-	margin: 0 auto;
-	padding: 0;
-}
-.service-request-page-form form.form span.value span label{
-	color: #fff !important;
-}
-.service-request-page-form form.form p.submit input{
-	background-color: #000000;
-	color: #ffffff;
-	padding: 0;
+.service-request-form .submit input[type="submit"]{
 	width: 90px;
 	height: 35px;
-	margin: 0 auto;
-	display: block;
+	background-color: #000000;
+	border: 0;
+	color: #ffffff;
+	font-size: 14px;
+	font-family:"Museo Slab" , Arial;
+	text-transform: uppercase;
+	-moz-border-radius: 13px;
+	-webkit-border-radius: 13px;
+	border-radius: 13px;
+	cursor: pointer;
 }
